namespace server.application.training;

public enum TrainingOutcome
{
    Win = 1,
    Lose = 2,
    Draw = 3
}
