classDiagram
    %% Enum 定義は docs/MMD21_Enum.mmd を参照
    namespace TrainingDomain {
        %% トレーニングモード
        class TrainingEnemy {
            <<Entity>>
            +TrainingEnemyId Id
            +string Name
            +string ImagePath
            +int Level
            +Status Status
            -ValidateName(name: string) string
        }

        class TrainingEnemyId {
            <<Value Object>>
            +int Id
        }

        class ITrainingEnemyRepository {
            +Task~TrainingEnemy?~ GetTrainingEnemyAsync(id: TrainingEnemyId)
            +Task~IReadOnlyList~TrainingEnemy~~ GetTrainingEnemiesAsync()
        }

        class TrainingBattleFactory {
            <<Application Service>>
            +CreatePlayerSnapshot(player: Player) BattleActorSnapshot
            +CreateEnemySnapshot(enemy: TrainingEnemy) BattleActorSnapshot
            +CreateInitialStates(player: Player, enemy: TrainingEnemy) BattleActorState[]
            +CreateActions(playerActorId: BattleActorId, enemyActorId: BattleActorId) BattleAction[]
        }

        class TrainingOutcome {
            <<Enum>>
            Win
            Lose
            Draw
        }

        class TrainingOutcomeJudge {
            <<Domain Service>>
            +Judge(states: IEnumerable~BattleActorState~, playerActorId: BattleActorId, enemyActorId: BattleActorId) TrainingOutcome
        }

        class TrainingExpCalculator {
            <<Domain Service>>
            +Calculate(player: Player, enemy: TrainingEnemy, outcome: TrainingOutcome, playerDealtTotalDamage: int) int
        }

        class TrainingBattleSummary {
            <<Value Object>>
            +int Turn
            +int CurrentPlayerHp
            +int CurrentEnemyHp
            +TrainingOutcome Outcome
        }

        class TrainingService {
            <<Application Service>>
            +GetTrainingEnemies() TrainingEnemyView[]
            +ExecuteTraining(playerId : PlayerId, enemyId : TrainingEnemyId) TrainingResultView
            -BuildSummary(resolution: BattleTurnResolution, playerActorId: BattleActorId, enemyActorId: BattleActorId, turn: int) TrainingBattleSummary
            -ApplyExp(player: Player, exp: int) bool
        }

        class TrainingEnemyView {
            <<Read Model>>
            +string Name
            +string ImagePath
            +int Level
        }

        class TrainingResultView {
            <<Read Model>>
            +string TrainingResult
            +int Turn
            +int CurrentPlayerHp
            +int MaxPlayerHp
            +int CurrentEnemyHp
            +int MaxEnemyHp
            +int Exp
            +bool IsLevelUp
        }
    }

    TrainingEnemy *-- TrainingEnemyId : has
    ITrainingEnemyRepository --> TrainingEnemy : loads
    TrainingBattleFactory ..> TrainingEnemy : uses
    TrainingOutcomeJudge ..> TrainingOutcome : returns
    TrainingExpCalculator ..> TrainingOutcome : uses
    TrainingBattleSummary ..> TrainingOutcome : has
    TrainingService ..> ITrainingEnemyRepository : use
    TrainingService ..> TrainingBattleFactory : use
    TrainingService ..> TrainingOutcomeJudge : use
    TrainingService ..> TrainingExpCalculator : use
    TrainingService ..> TrainingBattleSummary : builds
    TrainingService ..> TrainingResultView : has
    TrainingService ..> TrainingEnemyView : has
